added handling of form in /name

--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,8 @@
      <form action="/name" method="post">
       <label>First Name :</label>
       <input type="text" name="first" value="John"><br>
+	  <label>Middle Name :</label>
+	  <input type='text' name='middle' value=""><br>
       <label>Last Name :</label>
       <input type="text" name="last" value="Doe"><br><br>
       <input type="submit" value="Submit">
